[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fronts representation learning"
version = "0.0.dev0"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "J. Tallman", email = "jttallman@ucdavis.edu" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Programming Language :: Python :: 3"
]

urls = { "Homepage" = "https://github.com/AI-for-Ocean-Science/" }
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "torch==2.8.0",
    "torchvision",
    "timm==0.3.2",
    "xmitgcm",
    "dask==2025.10.0",
    "s3fs==2025.9.0",
]

[project.optional-dependencies]

plotting = [
    "matplotlib",
    "seaborn",
    "bokeh",
    "cmocean",
]

test = ["pytest"]

#[tool.setuptools.packages.find]
#where = ["src"]
#
#[project.scripts]
#generate-llc-dataset = "dbof.cli.generate_front_training_data:main"
